--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
         <h1 id="title">Song Guesser</h1>
         <p>Guess what song has more daily streams by clicking the image!
             <br>
-            Songs & stream count taken from <a href = "https://spotifycharts.com/regional/global/daily/latest">Spotify's Daily Global Top 200 list</a> and song data taken from Spotify's API
+            Songs & stream count taken from the latest <a href = "https://spotifycharts.com/regional/us/daily/latest">Spotify Daily US Top 200 Chart</a> and song data taken from Spotify's API
         </p>
         <div id="game-box">
             <div class="track-box" id="fielda"></div>
